Improving colour contrast of net change bars and fixing arrow styling issues

--- a/waterfall/chart.css
+++ b/waterfall/chart.css
@@ -53,5 +53,5 @@
  } */
 
  .netChange line{
-  stroke-width: 3px;
+  stroke-width: 2px;
  }
